# renquant-orchestrator

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml  renquant_repo.yml
.github/: CODEOWNERS  pull_request_template.md
data/: c1_drift_baseline.json  strategy_snapshot.json  twin_parity_manifest.json
deploy/: com.renquant.crypto-session.plist  com.renquant.rq104-dawn-preflight.plist  com.renquant.rq104-degradation-sentinel.plist  com.renquant.rq104-shadow-scorer-sentinel.plist  com.renquant.run-surface-drift.plist  com.renquant.shadow-ab-daily.plist  com.renquant.stops-liveness.plist  deployment-manifest.json
doc/: AGENT-RETROSPECTIVE.md  AGENT-STATE.md  INDEX.md  agent-pr-workflows.md  cross-repo-control-plane-design.md  mainline-engineering-census-pr.md  renquant-system-feature-map.md  roadmap-backlog.json
ops/: launchd_manifest.json  liveness_common.py  run_surface_drift_check.py
scripts/: build_shadow_analyst_panel.py  buy_funnel_report.py  c3_residual_momentum.py  check_agent_gh_identity.sh  check_mirror_drift.py  check_model_bundle_consistency.py  check_score_db_health.py  check_sizing_fidelity.py  check_twin_parity.py  crypto_session_runner.py  crypto_stage0_battery.py  d3_core_shrink_check.py  d6_freeze_record.py  data_freshness_audit.py  diag_meanrev_vs_momentum.py  diag_mu_hot_topup.py  diag_orcl_and_semis.py  diag_protection_trajectory.py  diagnose_raw_jump_0626.py  expkit_smoke_test.py  fingerprint_census.py  fundamentals_scan.py  g2_reversal_backtest.py  generate_strategy_snapshot.py  git_status_porcelain.py  install_stops_pager.sh  kpi_scorecard.py  m3_haircut_replay.py  m3_independent_verification.py  m4b_floor_replay.py  m8_cluster_wave1.py  m8_independent_verification.py  minute_feature_scan.py  minute_rth.py  minute_signal_costtest.py  mirror_drift_inventory.py  model_promote.py  msig_c2_quality.py  msig_c4_trendscan.py  pead_longonly_orthogonality.py  (+46 more)
security/: persistence_guard_allowed_signers
tests/: fixture_rawlabel_sidecar_columns_176.json  test_agent_automation_poller.py  test_agent_breaker.py  test_agent_workflows.py  test_anomaly_triggers.py  test_artifact_resolver.py  test_attribution_bridge.py  test_attribution_decompose.py  test_attribution_engine.py  test_attribution_report.py  test_bridge_live_bundle.py  test_build_patchtst_wf_manifest.py  test_build_patchtst_wf_manifest_refactor.py  test_build_patchtst_wf_manifest_tjp.py  test_build_shadow_analyst_panel.py  test_build_wf_manifest.py  test_build_wf_manifest_refactor.py  test_build_wf_manifest_tjp.py  test_bundle_consistency_ci_gate.py  test_bundle_seal.py  test_buy_funnel_report.py  test_c3_residual_momentum.py  test_census_ratchet.py  test_check_model_bundle_consistency.py  test_check_paper_trading_readiness.py  test_cli.py  (+182 more)
(+995 files in other folders)
